--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     padding: 10px;
 }
 
-img{
+.head-food img{
     height: 10vh;
 }
 
@@ -26,7 +26,7 @@ img{
     gap: 12px;
 }
 
-.headline-img{
+.headline-img img{
     height: 50vh;
     width: 100%;
     object-fit: cover;
