--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,14 @@
 <div class="head">
     <img src="/Favicon/android-chrome-512x512.png" alt="Emblem">
-    <img src="/Logo/Logo.png" alt="">
+
+
+<label class="menuButton" for="check">
+    <input type="checkbox" id="check">
+    <span class="top"></span>
+    <span class="mid"></span>
+    <span class="bot"></span>
+</label>
+
 </div>
 
 
